# nemo-tags

./: .gitignore  Makefile  PKGBUILD.stable  README.md  README.ru.md  build.py  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: update-aur.yml
src/: database.py  extension.py  header.py  icons.py  manager.py  ui.py
