[project]
name = "nemo-tags"
version = "1.0.0"
description = "Plugin for Nemo file manager: file tags"
authors = [
  {name = "DIMFLIX", email = "dimflix.official@gmail.com"},
]
requires-python = ">=3.8"
dependencies = [
    "pygobject>=3.48.2",
]

[project.urls]
Homepage = "https://github.com/meowrch/nemo-tags"
Documentation = "https://github.com/meowrch/nemo-tags/wiki"
Repository = "https://github.com/meowrch/nemo-tags.git"
"Bug Tracker" = "https://github.com/meowrch/nemo-tags/issues"
Changelog = "https://github.com/meowrch/nemo-tags/blob/master/CHANGELOG.md"
